# emerald_play

./: README.md  fabfile.py
deploy/: config.py  config.yml  config_user.yml  deploy.py
deploy/templates/: default.sh  monte_pi.sh
monte_pi/: CMakeLists.txt  monte_pi.cu
thrust_monte_pi/: CMakeLists.txt  monte_pi.cu
